# grid-traversal

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh
modules/gridTraversal/: CMakeLists.txt
modules/gridTraversal/headers/: GridImpl.h  Types.h
modules/gridTraversal/include/gridTraversal/: CellPosition.h  Grid.h  gridTraversal.h
modules/gridTraversal/src/: Grid.cpp  GridImpl.cpp
modules/gridTraversal/tst/: CMakeLists.txt
modules/gridTraversal/tst/src/: GridImplTest.cpp  GridTest.cpp
modules/main/: CMakeLists.txt
modules/main/src/: main.cpp
